RESOLVED FIXED238585
Fix null string crashes in PushService
https://bugs.webkit.org/show_bug.cgi?id=238585
Summary Fix null string crashes in PushService
Ben Nham
Reported 2022-03-30 19:19:23 PDT
Fix null string crashes in PushService
Attachments
Patch (5.78 KB, patch)
2022-03-30 19:43 PDT, Ben Nham
no flags
Ben Nham
Comment 1 2022-03-30 19:43:51 PDT
Ben Nham
Comment 2 2022-03-30 20:19:06 PDT
EWS
Comment 3 2022-03-31 04:18:22 PDT
Committed r292152 (249059@main): <https://commits.webkit.org/249059@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 456196 [details].
Note You need to log in before you can comment on or make changes to this bug.