Fix null string crashes in PushService https://bugs.webkit.org/show_bug.cgi?id=238585

Reviewed by Darin Adler.

We've seen a few webpushd crashes due to some PushService routines being passed null string
arguments. Guard against this with isEmpty checks.

This also shouldn't be possible--we shouldn't be sending these requests to webpushd in the
first place. Add some logs to help us catch what's going on.

* webpushd/PushService.mm:
(WebPushD::PushService::getSubscription):
(WebPushD::PushService::subscribe):
(WebPushD::PushService::unsubscribe):
(WebPushD::PushService::incrementSilentPushCount):
(WebPushD::PushService::removeRecordsImpl):



Canonical link: https://commits.webkit.org/249059@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292152 268f45cc-cd09-0410-ab3c-d52691b4dbfc